correccion de errores menors en nombres de rutas
