# src/routes/providers.routes.ts
@@ -5,9 +5,9 @@ const router = express.Router()
 //---- ACA COMIENZAN LOS ENDPOINT DE USUARIOS ----/
 
 router.get('/', ProvidersControllers.getAllProviders)
+router.post('/', ProvidersControllers.createProvider)
 router.get('/:id', ProvidersControllers.getProviderById)
-router.post('/createProvider', ProvidersControllers.createProvider)
-router.patch('updateProvider/:id', ProvidersControllers.updateProvider)
+router.patch('/:id', ProvidersControllers.updateProvider)
 
 //Aca debemos agregar las demas rutas de usuarios
 
