# src/routes/reviews.routes.ts
@@ -3,9 +3,9 @@ import express from 'express'
 const router = express.Router()
 
 router.get('/', ReviewsControllers.getAllReviews)
+router.post('/', ReviewsControllers.createReview)
+router.patch('/:id', ReviewsControllers.updateReview)
 router.get('/UserId/:id', ReviewsControllers.getByUserId)
 router.get('/ProviderId/:id', ReviewsControllers.getByProviderId)
-router.post('/createReview', ReviewsControllers.createReview)
-router.patch('/updateReview/:id', ReviewsControllers.updateReview)
 
 export default router
